--- a/app/assets/style/_index.scss
+++ b/app/assets/style/_index.scss
@@ -1,110 +1,101 @@
-body {
-    line-height: 1.5;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Microsoft JhengHei", Roboto, "Helvetica Neue", Arial, sans-serif;
-}
-
-*,
-*::before,
-*::after {
-    box-sizing: border-box;
-}
-
-/* container */
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0px $spacer*2;
-}
-
-/* header */
 .header {
-    background: $mediumRed;
-    color: $white;
+    background: $primary;
+    color: $accent;
 
     .container {
+        @include pad-below {
+            padding: unset;
+        }
+    }
+
+    .header-block {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
         align-items: center;
+
+        @include pad-below {
+            flex-direction: column;
+        }
     }
 
-    h1 {
-        display: block;
+    h1 a {
+        display: block; //a 連結為行內元素，轉為區塊元素
         width: 80px;
         height: 48px;
         background: url(../images/logo-white.png);
         background-size: cover;
-        /* 圖片取代文字技巧 */
-        text-indent: 101%;
-        white-space: nowrap;
-        overflow: hidden;
-        margin: $spacer*2 0px;
+        //圖片取代文字技巧 
+        text-indent: 101%; //首行縮排
+        white-space: nowrap; //希望元素在第一排上面，沒有斷行
+        overflow: hidden; //自動隱藏超出的文字或圖片
+        margin: $spacer-base 0px;
     }
 
     .nav {
         display: flex;
         flex-wrap: wrap;
-        font-size: $size*1.25;
+        font-size: $h5-font-size;
 
-        li {
-            margin-left: $spacer*8;
-        }
-
-        li:hover {
-            font-weight: 700;
-            text-decoration: underline;
-        }
-    }
-}
-
-@media(max-width: 767px) {
-    .header {
-        .container {
-            flex-direction: column;
-            padding: unset;
-        }
-
-        h1 {
-            margin: $spacer*2 0;
-        }
-
-        .nav {
+        @include pad-below {
             text-align: center;
             width: 100%;
-            font-size: $size;
+            font-size: $font-size-base;
+        }
 
-            li {
-                width: 50%;
-                padding: $spacer*1.5 0px;
-                margin-left: unset;
-                outline: 1px $white solid;
+        a {
+            padding: $spacer-md;
+
+            &:hover {
+                font-weight: 700;
+                text-decoration: underline;
             }
+        }
+    }
 
-            li:hover {
-                background: $darkRed;
-                text-decoration: none;
+    li {
+        @include pad-below {
+            width: 50%;
+            padding: $spacer-sm*1.5 0px;
+            outline: 1px $accent solid;
+
+            &:hover {
+                background: $primary-dark;
             }
         }
     }
 }
 
 .footer {
-    background: $mediumRed;
-    color: $white;
+    background: $primary;
+    color: $accent;
 
-    .top-footer {
+    .top {
         display: flex;
         justify-content: space-between;
         border-bottom: 1px solid #db9694;
-        padding-top: $spacer*6;
-        padding-bottom: $spacer*4;
+        padding-top: $spacer-lg;
+        padding-bottom: $spacer-md;
+
+        @include pad-below {
+            padding-top: $spacer-base*1.5;
+            padding-bottom: $spacer-base*1.5;
+        }
     }
 
-    .nav-footer {
+    .nav {
         display: flex;
+
+        @include pad-below {
+            display: none;
+        }
 
         li {
             padding: 22px 48px 22px 0;
+
+            @include pad {
+                padding: 10px 32px 22px 0;
+            }
         }
 
         li:hover {
@@ -113,101 +104,76 @@ body {
         }
     }
 
-    .contact-footer {
-        font-size: $size*2.25;
+    .contact {
+        font-size: $font-size-base*2.25;
+
+        @include pad-below {
+            font-size: $font-size-base;
+        }
 
         li {
             display: flex;
             align-items: center;
 
             span {
-                margin-right: $spacer*2.75;
-            }
-        }
-    }
+                margin-right: 22px;
 
-    .sidebar-footer img {
-        width: 48px;
-        height: 48px;
-        margin-left: $spacer*4;
-    }
-
-    .bottom-footer {
-        display: flex;
-        justify-content: space-between;
-        padding: $spacer*4 0px;
-
-        .link {
-            display: flex;
-            font-size: $size*0.875;
-
-            li {
-                margin-left: $spacer*6;
-            }
-
-            li:hover {
-                font-weight: 700;
-                text-decoration: underline;
-            }
-        }
-
-    }
-}
-
-@media(max-width: 992px) {
-    .footer {
-        .nav-footer {
-            li {
-                padding: 10px 32px 22px 0;
-            }
-        }
-    }
-
-}
-
-@media(max-width: 767px) {
-    .footer {
-        .top-footer {
-            padding-top: $spacer*3;
-            padding-bottom: $spacer*3;
-        }
-
-        .nav-footer {
-            display: none;
-        }
-
-        .contact-footer {
-            font-size: $size;
-
-            li {
-                span {
-                    margin-right: $spacer*1.375;
+                @include pad-below {
+                    margin-right: 11px;
                 }
             }
         }
+    }
 
-        .sidebar-footer {
-            img {
-                width: 24px;
-                height: 24px;
-                margin-left: $spacer;
-            }
+    .sidebar img {
+        width: 48px;
+        height: 48px;
+        margin-left: $spacer-md;
+
+        @include pad-below {
+            width: 24px;
+            height: 24px;
+            margin-left: $spacer-sm;
+        }
+    }
+
+    .bottom {
+        display: flex;
+        justify-content: space-between;
+        padding: $spacer-md 0px;
+
+        @include pad-below {
+            flex-direction: column;
+            padding-top: $spacer-base;
+            padding-bottom: $spacer-base*1.5;
         }
 
+        .link {
+            display: flex;
+            font-size: $font-size-sm;
 
-        .bottom-footer {
-            flex-direction: column;
-            padding-top: $spacer*2;
-            padding-bottom: $spacer*3;
-
-            .link {
+            @include pad-below {
                 flex-wrap: wrap;
-                font-size: $size;
+                font-size: $font-size-base;
+            }
 
-                li {
-                    margin-left: unset;
+            a {
+                padding: $spacer-base*1.5;
+
+                @include pad-below {
+                    padding: unset;
+                }
+
+                &:hover {
+                    font-weight: 700;
+                    text-decoration: underline;
+                }
+            }
+
+            li {
+                @include pad-below {
                     width: 100%;
-                    margin-top: $spacer;
+                    margin-top: $spacer-sm;
                 }
             }
         }
