--- a/app/layout.ejs
+++ b/app/layout.ejs
@@ -14,13 +14,15 @@
 <body>
   <header class="header">
     <div class="container">
-      <h1><a href="">logo</a></h1>
-      <ul class="nav">
-        <li><a href="#">系列鏡框</a></li>
-        <li><a href="#">門市據點</a></li>
-        <li><a href="#">部落格</a></li>
-        <li><a href="#">常見問題</a></li>
-      </ul>
+      <div class="header-block">
+        <h1><a href="index.html">logo</a></h1>
+        <ul class="nav">
+          <li><a href="series-optical.html">系列鏡框</a></li>
+          <li><a href="store.html">門市據點</a></li>
+          <li><a href="blog.html">部落格</a></li>
+          <li><a href="faq.html">常見問題</a></li>
+        </ul>
+      </div>
     </div>
   </header>
 
@@ -28,16 +30,16 @@
 
     <footer class="footer">
       <div class="container">
-        <div class="top-footer">
-          <div class="main-footer">
-            <ul class="nav-footer">
+        <div class="top">
+          <div class="main">
+            <ul class="nav">
               <li><a href="#">首頁</a></li>
               <li><a href="#">系列鏡框</a></li>
               <li><a href="#">門市據點</a></li>
               <li><a href="#">部落格</a></li>
               <li><a href="#">常見問題</a></li>
             </ul>
-            <ul class="contact-footer">
+            <ul class="contact">
               <li>
                 <span class="material-symbols-outlined">
                   call
@@ -52,13 +54,13 @@
               </li>
             </ul>
           </div>
-          <div class="sidebar-footer">
+          <div class="sidebar">
             <img src="./assets/images/ic-social-fb.png" alt="">
             <img src="./assets/images/ic_social_ig.png" alt="">
             <img src="./assets/images/ic_social_line.png" alt="">
           </div>
         </div>
-        <div class="bottom-footer">
+        <div class="bottom">
           <div class="copyright">Copyright © 2020 Glasses.All rights reserved.</div>
           <ul class="link">
             <li><a href="#">隱私權政策</a></li>
